# ardupilot_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
agents/cessna/: cessna.xacro
agents/iris/: iris.xacro
agents/plane/: plane.xacro
launch/: copter.launch  multi_plane.launch  plane.launch  sim.launch  spawn_mav.launch
models/iris_with_standoffs/: model.sdf
models/iris_with_standoffs_demo/: model.config
models/plane/: plane.sdf
models/zephyr_delta_wing_ardupilot_demo/: delta_wing.sdf
patches/: README.md  Zephyr-Params.patch
scripts/: copter_sitl.sh  plane_sitl.sh
src/: ArduCopterIRLockPlugin.cc  ArduCopterPlugin.cc  ArduPilotPlugin.cc
worlds/: iris_ardupilot.world  plane_ardupilot.world
xacro/: arducopter.xacro  arduplane.xacro  camera.xacro  control_surface.xacro  imu.xacro  plane_prop.xacro  rotor.xacro
